# RAG-System

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: documents.py  health.py  ingest.py  query.py
app/cache/: query_cache.py
app/core/: config.py  logging.py
app/embeddings/: embedder.py
app/evaluation/: evaluator.py  metrics.py
app/graph/: rag_graph.py  state.py
app/graph/nodes/: generator_node.py  query_rewriter.py  reranker_node.py  retriever_node.py
app/ingestion/: chunker.py  cleaner.py  loader.py
app/llm/: mistral_client.py
app/observability/: logger.py  tracer.py
app/retrieval/: hybrid_retriever.py  reranker.py
app/static/: index.html
app/vectorstore/: faiss_store.py
scripts/: evaluate.py  ingest_pdfs.py
tests/: test_evaluation.py  test_ingestion.py  test_retrieval.py
